<resources>
    <string name="app_name">Family Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="username_text">User Name:</string>
    <string name="password_text">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_address">Email:</string>
    <string name="gender_buttons">Gender:</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="map_screen_prompt">"Click on a marker to see event details</string>
    <string name="settings_activity_label">Family Map: Settings</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="register_button">REGISTER</string>
    <string name="onclick_signin">You clicked the sign in button!</string>
    <string name="onclick_register">You clicked the register button!</string>
    <string name="life_story_title">Life Story Lines</string>
    <string name="show_life_story">SHOW LIFE STORY LINES</string>
    <string name="family_tree_title">Family Tree Lines</string>
    <string name="show_family_tree">SHOW FAMILY TREE LINES</string>
    <string name="spouse_line_title">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="father_lines">Father\'s Side</string>
    <string name="filter_father_side">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_lines">Mother\'s Side</string>
    <string name="filter_mother_side">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="filter_events">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout_title">Logout</string>
    <string name="logout_description">RETURN TO LOGIN SCREEN</string>
    <string name="person_activity_name">Family Map: Person Details</string>
    <string name="personListTitle">FAMILY</string>
    <string name="eventListTitle">LIFE EVENTS</string>
    <string name="father_string">Father</string>
    <string name="mother_string">Mother</string>
    <string name="child_string">Child</string>
    <string name="spouse_string">Spouse</string>
    <string name="search_activity_name">Family Map: Search</string>
    <string name="search_hint">Search for People or Events</string>

    <string name="action_jump">Jump</string>
    <string name="action_run">Run</string>
    <string name="action_scream">Scream</string>
</resources>