<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_story_title"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_life_story"
            android:textSize="7pt"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:id="@+id/showLifeStorySwitch"/>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_tree_title"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_family_tree"
            android:textSize="7pt"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:id="@+id/showFamilyTreeLinesSwitch"/>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spouse_line_title"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_spouse_lines"
            android:textSize="7pt"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:id="@+id/showSpouseLinesSwitch"/>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/father_lines"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_father_side"
            android:textSize="7pt"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:id="@+id/filterFathersSideSwitch"/>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mother_lines"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_mother_side"
            android:textSize="7pt"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:id="@+id/filterMotherSideSwitch"/>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_events"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_events"
            android:textSize="7pt"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:id="@+id/filterMaleEventSwitch"/>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_events"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_events"
            android:textSize="7pt"/>

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:id="@+id/filterFemaleEventsSwitch"/>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/logout_layout"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingRight="4dp"
    android:paddingLeft="4dp"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_title"
            android:textSize="7.5pt"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_description"
            android:textSize="7pt"/>

    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:background="@android:color/darker_gray"/>


</LinearLayout>
